# py-dperf

./: .gitignore  README.md  __init__.py  datatypes.py  profiler.py  pyproject.toml  run.py
parsers/: __init__.py  mlx_deepseek.py
src/: __init__.py  datatypes.py  profiler.py
src/parsers/: __init__.py  meta.py  mlx.py  mlx_deepseek.py
test/: test_models.py
