[project]
name = "py-dperf"
version = "0.1.0"
description = "Cross-platform device profiler for ML models in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub[cli]==0.24.7",
    "psutil>=7.0.0",
    "py-cpuinfo>=9.0.0",
    "numpy>=1.24.0",
    "mlx==0.28.0", 
    "mlx-lm==0.25.0"
]

[project.optional-dependencies]
torch = ["torch>=2.0.0", "transformers>=4.30.0"]
cuda12 = ["cupy-cuda12x>=13.6.0", "torch>=2.0.0"]
cuda11 = ["cupy-cuda11x>=13.6.0", "torch>=2.0.0"]
rocm50 = ["cupy-rocm-5-0>=13.3.0", "torch>=2.0.0"]
windows = ["torch>=2.0.0", "transformers>=4.30.0"]
